BUG#12982 - LOAD DATA fails without any error for big files with big             read buffer Setting read buffer to values greater than SSIZE_MAX results in unexpected behavior.

According to read(2) manual:
If count is greater than SSIZE_MAX, the result is unspecified.

Set upper limit for read_buffer_size and read_rnd_buffer_size to
SSIZE_MAX.


include/my_global.h:
  Define SSIZE_MAX if not defined.
sql/mysqld.cc:
  Set upper limit for read_buffer_size and read_rnd_buffer_size to
  SSIZE_MAX.